# splinter

./: .gitignore  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
main/: CMakeLists.txt  config.c  config.h  decoys_154.c  decoys_154.h  decoys_awdl.c  decoys_awdl.h  decoys_ble.c  decoys_ble.h  decoys_thread.c  decoys_thread.h  decoys_wifi.c  decoys_wifi.h  detect_core.c  detect_core.h  detector.c  detector.h  idf_component.yml  jam_core.c  jam_core.h  jam_detect.c  jam_detect.h  maintenance.c  maintenance.h  profiles.c  profiles.h  sniff_ble.c  sniff_ble.h  sniff_wifi.c  sniff_wifi.h  splinter_main.c  status_led.c  status_led.h  swarm.c  swarm.h  tracker_id.c  tracker_id.h
test/: awdl_build_test.c  detect_core_test.c  jam_core_test.c  thread_build_test.c  tracker_id_test.c
webui/: app.css  app.js  index.html
